<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <FrameLayout
        android:orientation="vertical"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.activities.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:gravity="center_vertical"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assets"
                    android:textSize="18sp"
                    app:lineHeight="18sp"
                    app:fontFamily="@font/bold"
                    android:layout_alignParentLeft="true"
                    android:textColor="?sections_text_color"
                    android:layout_centerVertical="true"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimaryDark"
                    app:fontFamily="@font/bold"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    app:lineHeight="8sp"
                    android:id="@+id/assets_count"
                    />

            </RelativeLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_marginRight="@dimen/margin_24"
                app:contentPadding="@dimen/margin_16"
                app:cardCornerRadius="20dp"
                app:strokeWidth="1dp"
                app:strokeColor="#54D5D5D5"
                app:cardBackgroundColor="?asset_card_bg"
                app:cardElevation="0dp"
                android:id="@+id/nothing_found_card"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:fontFamily="@font/bold"
                        android:textSize="18sp"
                        android:textColor="?asset_card_title_text_color"
                        android:text="@string/oops"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:fontFamily="@font/medium"
                        android:textSize="12sp"
                        android:textColor="?asset_card_barcode"
                        android:text="@string/no_assets_desc"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="4dp"
                        android:id="@+id/no_assets_found"
                        />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="16dp"
                        app:contentPaddingRight="12dp"
                        app:contentPaddingLeft="12dp"
                        app:contentPaddingTop="4dp"
                        app:contentPaddingBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:id="@+id/search_again"
                        >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:fontFamily="@font/semi_bold"
                            android:textSize="12sp"
                            android:textColor="#FFFFFF"
                            android:text="@string/search_again"
                            android:layout_gravity="center"
                            android:gravity="center"
                            />

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/assets_list"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                />

        </LinearLayout>

        <!-- <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/assets_shimmer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:gravity="center_vertical"
                    >

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Assets"
                        android:textSize="18sp"
                        app:lineHeight="18sp"
                        app:fontFamily="@font/bold"
                        android:layout_alignParentLeft="true"
                        android:textColor="#000"
                        android:layout_centerVertical="true"
                        />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="#2FDBDBDB"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="16dp"
                        android:layout_alignParentRight="true"
                        android:gravity="center_vertical"
                        android:layout_centerVertical="true"
                        app:contentPaddingTop="4dp"
                        app:contentPaddingBottom="4dp"
                        >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="10 assets found"
                            android:textSize="14sp"
                            android:textColor="@color/colorPrimary"
                            app:fontFamily="@font/bold"
                            app:lineHeight="8sp"
                            android:visibility="invisible"
                            />

                    </com.google.android.material.card.MaterialCardView>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:orientation="vertical"
                    >

                    <include
                        layout="@layout/asset_item_dummy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                    <include
                        layout="@layout/asset_item_dummy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                    <include
                        layout="@layout/asset_item_dummy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout> -->

    </FrameLayout>

</layout>