<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.activities.MainActivity"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:paddingTop="12dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/margin_24"
            android:paddingLeft="@dimen/margin_24"
            android:paddingTop="@dimen/margin_8"
            android:paddingBottom="@dimen/margin_8"
            android:gravity="center_vertical"
            android:layout_gravity="top"
            >

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/menu_item_size"
                android:layout_height="@dimen/menu_item_size"
                app:contentPadding="0dp"
                app:cardElevation="0dp"
                app:strokeWidth="2dp"
                app:strokeColor="@color/menuIconStrokeColor"
                app:cardCornerRadius="24dp"
                android:layout_alignParentLeft="true"
                android:clickable="true"
                android:layout_centerVertical="true"
                android:foreground="?selectableItemBackground"
                android:id="@+id/menuBtn"
                >

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    app:srcCompat="@drawable/ic_menu_new"
                    android:tint="@color/colorPrimaryDark"
                    android:padding="0dp"
                    android:scaleType="centerInside"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@android:color/transparent"
                    />

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textSize="@dimen/collapsed_title_size"
                android:textColor="?title_text_color"
                app:fontFamily="@font/bold"
                android:text="@string/app_name"
                android:alpha="0"
                android:translationY="36dp"
                android:id="@+id/title"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center|right"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="@dimen/menu_item_size"
                    android:layout_height="@dimen/menu_item_size"
                    app:contentPadding="0dp"
                    app:cardElevation="0dp"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/menuIconStrokeColor"
                    app:cardCornerRadius="24dp"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    android:id="@+id/userBtn"
                    >

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/profile_img"
                        android:scaleType="centerCrop"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="E"
                        android:textSize="20sp"
                        android:textAllCaps="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:focusable="false"
                        android:textStyle="bold"
                        />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?toolbar_divider"
            android:alpha="0"
            android:id="@+id/toolbar_divider"
            />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:elevation="0dp"
                android:background="@android:color/transparent"
                >

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                    app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
                    app:expandedTitleTextAppearance="@style/ExpandedAppBar"
                    app:collapsedTitleGravity="center"
                    android:padding="0dp"
                    app:titleEnabled="false"
                    app:titleCollapseMode="scale"
                    >

                    <LinearLayout
                        android:id="@+id/expandedTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_24"
                        android:layout_marginRight="@dimen/margin_24"
                        android:layout_marginTop="@dimen/margin_16"
                        android:orientation="vertical"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="1.1"
                        android:layout_gravity="bottom">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/title_txt_size"
                                android:text="@string/expanded_title"
                                app:fontFamily="@font/semi_bold"
                                />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/icon_size"
                                android:layout_height="@dimen/icon_size"
                                app:srcCompat="@drawable/snowman"
                                android:scaleType="centerInside"
                                android:layout_marginLeft="@dimen/margin_8"
                                />

                        </LinearLayout>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?title_text_color"
                            android:textSize="@dimen/subtitle_txt_size"
                            android:layout_marginTop="4dp"
                            app:fontFamily="@font/bold"
                            android:text="@string/expanded_subtitle"
                            android:layout_marginRight="12dp"
                            />

                    </LinearLayout>

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                android:id="@+id/scroll_layout"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:strokeWidth="@dimen/search_card_stroke"
                        app:cardCornerRadius="28dp"
                        app:cardElevation="0dp"
                        app:cardMaxElevation="0dp"
                        app:cardBackgroundColor="?search_card_bg"
                        app:contentPadding="@dimen/margin_16"
                        app:strokeColor="@color/searchCardStroke"
                        android:layout_marginTop="@dimen/margin_16"
                        android:layout_marginLeft="@dimen/margin_24"
                        android:layout_marginRight="@dimen/margin_24"
                        android:id="@+id/filter_card"
                        >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/icon_size"
                                android:layout_height="@dimen/icon_size"
                                app:srcCompat="@drawable/ic_search"
                                android:scaleType="centerInside"
                                android:layout_centerVertical="true"
                                android:layout_alignParentLeft="true"
                                app:tint="?search_card_icon_color"
                                />

                            <androidx.appcompat.widget.AppCompatEditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/search_txt_size"
                                android:textColorHint="?search_card_hint_color"
                                android:hint="@string/filter_hint"
                                app:fontFamily="@font/medium"
                                app:lineHeight="@dimen/search_txt_line_h"
                                android:lineSpacingExtra="@dimen/search_txt_extra_line_h"
                                android:textColor="?search_card_text_color"
                                android:id="@+id/filter"
                                android:background="@android:color/transparent"
                                android:gravity="center"
                                android:layout_marginLeft="@dimen/margin_16"
                                android:lines="1"
                                android:maxLines="1"
                                android:focusableInTouchMode="true"
                                android:inputType="textFilter"
                                android:layout_gravity="center_vertical"
                                android:layout_centerInParent="true"
                                />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/icon_size"
                                android:layout_height="@dimen/icon_size"
                                app:srcCompat="@drawable/backspace"
                                android:scaleType="centerInside"
                                android:layout_centerVertical="true"
                                android:layout_alignParentRight="true"
                                android:visibility="invisible"
                                app:tint="@color/red"
                                android:id="@+id/clear_filter"
                                android:clickable="true"
                                android:foreground="?selectableItemBackground"
                                />

                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/margin_16">

                        <include
                            layout="@layout/categories_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/categories_layout"
                            />

                        <include
                            layout="@layout/assets_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_16"
                            android:id="@+id/assets_layout"
                            />

                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:contentPadding="0dp"
                app:cardElevation="2dp"
                app:cardCornerRadius="14dp"
                android:clickable="true"
                android:layout_gravity="bottom|right"
                android:layout_margin="@dimen/margin_24"
                app:rippleColor="@color/white"
                app:cardBackgroundColor="@color/colorPrimary"
                android:id="@+id/scan_barcode"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:background="@android:color/transparent"
                    app:tint="@color/white"
                    app:srcCompat="@drawable/barcode_scanner"
                    android:layout_gravity="center"
                    />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/menu_item_size"
                android:layout_height="@dimen/menu_item_size"
                app:contentPadding="0dp"
                app:cardElevation="0dp"
                app:strokeWidth="2dp"
                app:strokeColor="@color/menuIconStrokeColor"
                app:cardCornerRadius="24dp"
                android:layout_alignParentLeft="true"
                android:clickable="true"
                android:layout_centerVertical="true"
                android:foreground="?selectableItemBackground"
                android:id="@+id/go_To_top"
                app:cardBackgroundColor="?asset_card_bg"
                android:visibility="invisible"
                android:layout_gravity="center|bottom"
                android:layout_margin="@dimen/margin_24"
                app:rippleColor="@color/white"
                android:focusableInTouchMode="true"
                android:focusable="true"
                >

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    app:srcCompat="@drawable/ic_more"
                    app:tint="?search_card_text_color"
                    android:padding="0dp"
                    android:scaleType="centerInside"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@android:color/transparent"
                    android:rotation="180"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    />

            </com.google.android.material.card.MaterialCardView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>

</layout>